unreleased
==========

- optional support for A2DP FastStream codec (music & voice)
- allow to select BT transport codec with ALSA configuration
- allow to set PCM volume properties with ALSA configuration
- connection keep-alive timeout for all BT profiles
- fix for rapid consecutive SCO link close(2)/connect(2)
- bluealsa-aplay: forward PCM volume to ALSA mixer element

bluez-alsa v3.1.0 (2021-06-01)
==============================

- higher PCM bit depth for apt-X HD (24-bit) and LDAC (32-bit)
- support for A2DP Sink with apt-X (HD) if decoder is available
- support for A2DP Sink with LDAC codec if decoder is available
- better audio volume scaling (Bluetooth volume as loudness)
- support TLV data for dB calculations in ALSA control plug-in
- fix PCM delay reporting from connected Bluetooth devices
- most recently connected Bluetooth device as a default PCM
- lots of improvements to the ALSA PCM I/O plug-in
- use rst2man (docutils) instead of pandoc to build man-pages
- bluealsa-cli: utility for using D-Bus API from command line
- bash completion script for installed applications

bluez-alsa v3.0.0 (2020-09-15)
==============================

- separate D-Bus paths for PCM sink and source (API breakage)
- store PCM sample physical width in the D-Bus format property
- list available and supported audio codecs via D-Bus API
- support for A2DP audio codec selection or reconfiguration
- fix SBC encoder bit-pool selection (support SBC XQ quality)
- allow to disable software volume scaling via D-Bus API
- great improvement to the PCM I/O plug-in (thanks to @borine)
- install bluez-alsa manual pages (optional, requires pandoc)
- bluealsa-aplay: list connected BT devices and available PCMs
- bluealsa-aplay: fix PCM corruption due to out-of-bounds read

bluez-alsa v2.1.0 (2020-01-25)
==============================

- support HSP/HFP headset mode (connect phone without oFono)
- optional integration with UPower for battery level reporting