@@ -18,9 +18,18 @@ defaults.bluealsa.softvol "unchanged"
 defaults.bluealsa.delay 0
 defaults.bluealsa.battery "yes"
 defaults.bluealsa.service "org.bluealsa"
+# Default for mixer is to show all PCMs
+defaults.bluealsa.mixer "FF:FF:FF:FF:FF:FF"
 
 ctl.bluealsa {
-	@args [ BAT SRV ]
+	@args [ DEV BAT SRV ]
+	@args.DEV {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.mixer
+		}
+	}
 	@args.BAT {
 		type string
 		default {
@@ -36,8 +45,16 @@ ctl.bluealsa {
 		}
 	}
 	type bluealsa
-	service $SRV
+	device $DEV
 	battery $BAT
+	service $SRV
+	hint {
+		show {
+			@func refer
+			name defaults.namehint.extended
+		}
+		description "Bluetooth Audio Control Device"
+	}
 }
 
 pcm.bluealsa {
